# a_lang

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  _notes.md
data/katakana/: _records.json  katakana.json
libs/linux_slint/licenses/: index.html
libs/slint/include/slint/: slint_builtin_structs.h  slint_builtin_structs_internal.h  slint_enums.h  slint_enums_internal.h
libs/slint/licenses/: index.html
libs/win_slint/include/slint/: slint_generated_public.h
libs/win_slint/lib/: slint_cpp.dll.lib
libs/win_slint/lib/cmake/Slint/: SlintConfig.cmake  SlintTargets.cmake
src/: main.cpp
ui/: app-window.slint  mother_window.slint
ui/assets/: gallery_settings.slint
ui/assets/cards/: card.slint  card_data_struct.slint
ui/assets/pages/: about_page.slint  card_page.slint  dictionary_page.slint  page.slint  pages.slint
